# oxygn

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  config.yaml  example.config.yaml
assets/: benchmark_data.json  design.excalidraw
assets/benchmarks/1/: benchmark_data.json
crates/managers/: Cargo.toml
crates/managers/src/: backend.rs  pool.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs  listner.rs  responses.rs
crates/proxy/: Cargo.toml
crates/strategies/: Cargo.toml
crates/strategies/src/: lib.rs  limiting.rs  routing.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs
docs/: CONTRIBUTING.MD  architecture.md  configuration.md  graphs.md  installation.md  startup.md
examples/: echo.rs  parser.rs  threading.rs  tunneling.rs
src/: backend.rs  config.rs  lib.rs  main.rs  strategy.rs
src/managers/: mod.rs  pool.rs
src/network/: listner.rs  mod.rs  responses.rs
src/strategies/: limiting.rs  mod.rs  routing.rs
src/types/: config.rs  mod.rs
utils/: benchmark.py  nginx.conf  server.py
